--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#5C1012",
-        "titleBar.activeBackground": "#81171A",
-        "titleBar.activeForeground": "#FEFBFB"
-    }
+  "workbench.colorCustomizations": {
+    // "activityBar.background": "#5C1012",
+    // "titleBar.activeBackground": "#81171A",
+    "titleBar.activeForeground": "#FEFBFB"
+  }
 }
